Added a pong clone to demonstrate save percentage

--- a/Vincent/fractionMultiplication/fractionMultiplication.ipynb
+++ b/Vincent/fractionMultiplication/fractionMultiplication.ipynb
@@ -171,9 +171,15 @@
     "### Multiplying a fraction with a constant\n",
     "In this section we will talk about multiplying a fraction, say $\\dfrac{4}{7}$, with a constant, e.g. $3$ (a single integer). A good example of when this could be useful is when you need to double a recipe. <br>\n",
     "\n",
-    "Doing multiplication of this form is simply a subset of multiplying two fractions together since any constant, $3$ in this case, can be rewritten as $\\dfrac{3}{1}$ On a calculator try inputing any number divided by $1$, you will always get back the original number. <br>\n",
+    "When multiplying a fraction by a constant, you can think of it as an addition problem. Let's take our $\\frac{4}{7}\\times 3 = x$ as an example. This equation can be rewritten as $$\\frac{4}{7} \\times 3= \\frac{4}{7}+\\frac{4}{7}+\\frac{4}{7}$$\n",
     "\n",
-    "Let's demonstrate this with an example, take the fraction $\\dfrac{4}{7}$ and the constant $3$ and multiply them together, we get: \n",
+    "<img src=\"./images/mutiplyWithInt.png\">\n",
+    "\n",
+    "Now remember how to add fractions together to get $$\\frac{4}{7}+\\frac{4}{7}+\\frac{4}{7} = \\frac{4+4+4}{7} = \\frac{12}{7}$$\n",
+    "\n",
+    "We can also think of multiplication of this form has simply a subset of multiplying two fractions together since any constant, $3$ in this case, can be rewritten as $\\dfrac{3}{1}$. On a calculator try inputing any number divided by $1$, you will always get back the original number. <br>\n",
+    "\n",
+    "Let's demonstrate this with our example, take the fraction $\\dfrac{4}{7}$ and the constant $3$ and multiply them together, we get: \n",
     "\n",
     "$$\\frac{4}{7}\\times 3 = x$$\n",
     "\n",
