last update of Ecoglobalization notebook

--- a/Nathan/eco/Eco.ipynb
+++ b/Nathan/eco/Eco.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,8 +102,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This quiz was created from the quiz given by this document at www.earthrangers.org: http://www.earthrangers.org/wp-content/uploads/2016/08/how_big_is_my_ecological_footprint.pdf"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -112,7 +119,7 @@
      "data": {
       "text/html": [
        "<script src=\"https://d3js.org/d3.v3.js\"></script>\n",
-       "    <link rel=\"stylesheet\" type=\"text/css\" href=\"css/ecological-footprint.css\">\n",
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"css/ecological-footprint.css\">\n",
        "\n",
        "<div id=\"ecological-footprint-quiz-container\">\n",
        "    <h2>Ecological Footprint Quiz</h2>\n",
@@ -229,6 +236,15 @@
        "        </div>\n",
        "        <div class=\"food-question\">\n",
        "          <div class=\"flex-container-50-space\">\n",
+       "            <p class=\"question\">I compost my fruit/vegetables scraps and peels.</p>\n",
+       "            <select>\n",
+       "                <option>Yes</option>\n",
+       "                <option>No</option>\n",
+       "            </select>\n",
+       "          </div>\n",
+       "        </div>\n",
+       "        <div class=\"food-question\">\n",
+       "          <div class=\"flex-container-50-space\">\n",
        "            <p class=\"question\">_____ of my food has packaging.</p>\n",
        "            <select>\n",
        "                <option></option>\n",
@@ -248,11 +264,6 @@
        "                <option>One-third of my food</option>\n",
        "                <option>Half of my food</option>\n",
        "            </select>\n",
-       "          </div>\n",
-       "        </div>\n",
-       "        <div class=\"food-question\">\n",
-       "          <div class=\"flex-container-50-start\">\n",
-       "              <input type=\"checkbox\">I compost my fruit/vegetables scraps and peels.\n",
        "          </div>\n",
        "        </div>\n",
        "        <div class=\"score-container\">\n",
@@ -470,14 +481,6 @@
        "            <option>No garbage created today!</option>\n",
        "          </select>\n",
        "        </div>\n",
-       "        <div class=\"flex-container\">\n",
-       "          <p class=\"question\">All my garbage from today could fit into a: </p>\n",
-       "          <select class=\"question-options\">\n",
-       "            <option></option>\n",
-       "            <option>Yes</option>\n",
-       "            <option>No</option>\n",
-       "          </select>\n",
-       "        </div>\n",
        "        <input type=\"checkbox\" class=\"question\">I reuse items rather than throw them out<br>\n",
        "        <input type=\"checkbox\" class=\"question\">I repair items rather than throw them out<br>\n",
        "        <input type=\"checkbox\" class=\"question\">I recycle all my paper, cans, glass, and plastic<br>\n",
@@ -582,7 +585,7 @@
    "source": [
     "%%html\n",
     "<script src=\"https://d3js.org/d3.v3.js\"></script>\n",
-    "    <link rel=\"stylesheet\" type=\"text/css\" href=\"css/ecological-footprint.css\">\n",
+    "<link rel=\"stylesheet\" type=\"text/css\" href=\"css/ecological-footprint.css\">\n",
     "\n",
     "<div id=\"ecological-footprint-quiz-container\">\n",
     "    <h2>Ecological Footprint Quiz</h2>\n",
@@ -699,6 +702,15 @@
     "        </div>\n",
     "        <div class=\"food-question\">\n",
     "          <div class=\"flex-container-50-space\">\n",
+    "            <p class=\"question\">I compost my fruit/vegetables scraps and peels.</p>\n",
+    "            <select>\n",
+    "                <option>Yes</option>\n",
+    "                <option>No</option>\n",
+    "            </select>\n",
+    "          </div>\n",
+    "        </div>\n",
+    "        <div class=\"food-question\">\n",
+    "          <div class=\"flex-container-50-space\">\n",
     "            <p class=\"question\">_____ of my food has packaging.</p>\n",
     "            <select>\n",
     "                <option></option>\n",
@@ -718,11 +730,6 @@
     "                <option>One-third of my food</option>\n",
     "                <option>Half of my food</option>\n",
     "            </select>\n",
-    "          </div>\n",
-    "        </div>\n",
-    "        <div class=\"food-question\">\n",
-    "          <div class=\"flex-container-50-start\">\n",
-    "              <input type=\"checkbox\">I compost my fruit/vegetables scraps and peels.\n",
     "          </div>\n",
     "        </div>\n",
     "        <div class=\"score-container\">\n",
@@ -940,14 +947,6 @@
     "            <option>No garbage created today!</option>\n",
     "          </select>\n",
     "        </div>\n",
-    "        <div class=\"flex-container\">\n",
-    "          <p class=\"question\">All my garbage from today could fit into a: </p>\n",
-    "          <select class=\"question-options\">\n",
-    "            <option></option>\n",
-    "            <option>Yes</option>\n",
-    "            <option>No</option>\n",
-    "          </select>\n",
-    "        </div>\n",
     "        <input type=\"checkbox\" class=\"question\">I reuse items rather than throw them out<br>\n",
     "        <input type=\"checkbox\" class=\"question\">I repair items rather than throw them out<br>\n",
     "        <input type=\"checkbox\" class=\"question\">I recycle all my paper, cans, glass, and plastic<br>\n",
@@ -1043,15 +1042,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This quiz was created from the quiz given by this document at www.earthrangers.org: http://www.earthrangers.org/wp-content/uploads/2016/08/how_big_is_my_ecological_footprint.pdf"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -1071,13 +1063,13 @@
        "        border: 1px solid black;\n",
        "    }\n",
        "</style>\n",
-       "\n",
+       "<p>Attempt the quiz above to see the country rankings and where you stand amongst the crowd</p>\n",
        "<div id=\"ecological-footprint-countries-container\">\n",
        "    <h2>Ranking of countries by Ecological Footprint</h2>\n",
        "    <div id=\"button-container\">\n",
-       "        <input id=\"top-btn\" type=\"button\" value=\"Top 20\" onclick=\"filter('top')\">\n",
+       "        <input id=\"top-btn\" class=\"selected\" type=\"button\" value=\"Top 20\" onclick=\"filter('top')\">\n",
        "        <input id=\"bottom-btn\" type=\"button\" value=\"Bottom 20\" onclick=\"filter('bottom')\">\n",
-       "        <input id=\"all-btn\" class=\"selected\" type=\"button\" value=\"All\" onclick=\"filter('all')\">\n",
+       "        <input id=\"all-btn\" type=\"button\" value=\"All\" onclick=\"filter('all')\">\n",
        "    </div>\n",
        "    <table id=\"wikitable\">\n",
        "\n",
@@ -1107,13 +1099,13 @@
     "        border: 1px solid black;\n",
     "    }\n",
     "</style>\n",
-    "\n",
+    "<p>Attempt the quiz above to see the country rankings and where you stand amongst the crowd</p>\n",
     "<div id=\"ecological-footprint-countries-container\">\n",
     "    <h2>Ranking of countries by Ecological Footprint</h2>\n",
     "    <div id=\"button-container\">\n",
-    "        <input id=\"top-btn\" type=\"button\" value=\"Top 20\" onclick=\"filter('top')\">\n",
+    "        <input id=\"top-btn\" class=\"selected\" type=\"button\" value=\"Top 20\" onclick=\"filter('top')\">\n",
     "        <input id=\"bottom-btn\" type=\"button\" value=\"Bottom 20\" onclick=\"filter('bottom')\">\n",
-    "        <input id=\"all-btn\" class=\"selected\" type=\"button\" value=\"All\" onclick=\"filter('all')\">\n",
+    "        <input id=\"all-btn\" type=\"button\" value=\"All\" onclick=\"filter('all')\">\n",
     "    </div>\n",
     "    <table id=\"wikitable\">\n",
     "\n",
@@ -1176,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1201,8 +1193,146 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With global temperatures rising anually, these droughts could become more common than ever before. That being said, Canada could also experience droughts and limit the amount of water usage per household.\n",
-    "\n",
+    "With global temperatures rising anually, these droughts could become more common than ever before. That being said, Canada could also experience droughts and limit the amount of water usage per household."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"css/ecological-footprint.css\">\n",
+       "<div id=\"water-use-at-home-container\">\n",
+       "    <table>\n",
+       "        <tbody>\n",
+       "            <tr>\n",
+       "                <td class=\"water-usage-topic\">Bath</td>\n",
+       "                <td>A \"full\" tub varies, of course, but 36 gallons is a good average amount<br><span style=\"color: red\">Tip: </span>Taking a shower instead of a bath should save a good bit of water.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td class=\"water-usage-topic\">Shower</td>\n",
+       "                <td>Old showers used to use up to 5 gallons of water per minute. Water-saving shower heads produce about 2 gallons per minute.<br><span style=\"color:red\">Tip: </span>Taking a shorter shower using a low-flow showerhead saves lots of water.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td class=\"water-usage-topic\">Teeth Brushing</td>\n",
+       "                <td><1 gallon. Newer bath faucets use about 1 gallon per minute, whereas older models user over 2 gallons per minute.<br><span style=\"color: red;\">Tip: </span>Simply turn the faucet off when brushing your teeth.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td class=\"water-usage-topic\">Hands/face washing</td>\n",
+       "                <td>1 gallon.<br><span style=\"color: red\">Tip: </span>Simply turn the faucet off before drying your hands and face. If you don't mind a brisk wash, don't run the faucet until it gets hot before using it. Installing a faucet-head aerator will also reduce the water flow rate.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td class=\"water-usage-topic\">Face/leg shaving</td>\n",
+       "                <td>1 gallon.<br><span style=\"color: red\">Tip: </span>Simply turn the faucet while shaving.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td class=\"water-usage-topic\">Dishwasher</td>\n",
+       "                <td>6-16 gallons.<br>6-16 gallons. Newer, EnergyStar mdoels use 6 gallons or less per wash cycle, whereas older dishwashers might use up to 16 gallons per cycle.<br><span style=\"color: red\">Tip: </span>EnergyStar dishwashers not only save a lot of water but also save electricity.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td class=\"water-usage-topic\">Dish washing by hand</td>\n",
+       "                <td>About 8-27 galllons. This all epends on how efficient you are at hand-washing dishes. Newer kitchen faucets use aboutr 1.5-2 gallons per minutes, whereas older faucets use more<br><span style=\"color: red;\">Tip: </span>Efficient hand-washing\n",
+       "                    techniques include installing an aerator in your faucet head and scraping food off, soaking dishes in a basin of soapy water before getting started, and not letting the water run while your wash every dish. It's best to have two basins to work in\n",
+       "                    --one with hot, soapy water and the other with warm water for a rinse.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td class=\"water-usage-topic\">Clothes Washer</td>\n",
+       "                <td>25 gallons/load for newer washers. Older models might use about 40 gallons per load.<br><span style=\"color:red\">Tip: </span>EnergyStar clothes washers not only save a lot of water but also save electricity.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td class=\"water-usage-topic\">Toilet Flush</td>\n",
+       "                <td>3 gallons. Most new toilets use 1.6 gallons per flush, but many older toilets used about 4 gallons.<br><span style=\"color: red\">Tip: </span>Check for toilet leaks! Adjust the water level in your tank. But, best to install a new low-flow toilet.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td class=\"water-usage-topic\">Glasses of water you drank</td>\n",
+       "                <td>8 oz. per small glass (not counting for Fido or your cats). Also, note that you will using water for cooking.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td class=\"water-usage-topic\">Outdoor watering</td>\n",
+       "                <td>2 gallons per minute, depending on the force of your faucet. This may sound like too much but the large size of lawns and yards means outdoor water use can be a significant use of water.</td>\n",
+       "            </tr>\n",
+       "        </tbody>\n",
+       "    </table>\n",
+       "</div>\n",
+       "<script>\n",
+       "    var tr = d3.select(\"#water-use-at-home-container\").select(\"table\").selectAll(\"tr\").select(\"td\").style(\"width\", \"70px\");\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<link rel=\"stylesheet\" type=\"text/css\" href=\"css/ecological-footprint.css\">\n",
+    "<div id=\"water-use-at-home-container\">\n",
+    "    <table>\n",
+    "        <tbody>\n",
+    "            <tr>\n",
+    "                <td class=\"water-usage-topic\">Bath</td>\n",
+    "                <td>A \"full\" tub varies, of course, but 36 gallons is a good average amount<br><span style=\"color: red\">Tip: </span>Taking a shower instead of a bath should save a good bit of water.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td class=\"water-usage-topic\">Shower</td>\n",
+    "                <td>Old showers used to use up to 5 gallons of water per minute. Water-saving shower heads produce about 2 gallons per minute.<br><span style=\"color:red\">Tip: </span>Taking a shorter shower using a low-flow showerhead saves lots of water.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td class=\"water-usage-topic\">Teeth Brushing</td>\n",
+    "                <td><1 gallon. Newer bath faucets use about 1 gallon per minute, whereas older models user over 2 gallons per minute.<br><span style=\"color: red;\">Tip: </span>Simply turn the faucet off when brushing your teeth.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td class=\"water-usage-topic\">Hands/face washing</td>\n",
+    "                <td>1 gallon.<br><span style=\"color: red\">Tip: </span>Simply turn the faucet off before drying your hands and face. If you don't mind a brisk wash, don't run the faucet until it gets hot before using it. Installing a faucet-head aerator will also reduce the water flow rate.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td class=\"water-usage-topic\">Face/leg shaving</td>\n",
+    "                <td>1 gallon.<br><span style=\"color: red\">Tip: </span>Simply turn the faucet while shaving.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td class=\"water-usage-topic\">Dishwasher</td>\n",
+    "                <td>6-16 gallons.<br>6-16 gallons. Newer, EnergyStar mdoels use 6 gallons or less per wash cycle, whereas older dishwashers might use up to 16 gallons per cycle.<br><span style=\"color: red\">Tip: </span>EnergyStar dishwashers not only save a lot of water but also save electricity.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td class=\"water-usage-topic\">Dish washing by hand</td>\n",
+    "                <td>About 8-27 galllons. This all epends on how efficient you are at hand-washing dishes. Newer kitchen faucets use aboutr 1.5-2 gallons per minutes, whereas older faucets use more<br><span style=\"color: red;\">Tip: </span>Efficient hand-washing\n",
+    "                    techniques include installing an aerator in your faucet head and scraping food off, soaking dishes in a basin of soapy water before getting started, and not letting the water run while your wash every dish. It's best to have two basins to work in\n",
+    "                    --one with hot, soapy water and the other with warm water for a rinse.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td class=\"water-usage-topic\">Clothes Washer</td>\n",
+    "                <td>25 gallons/load for newer washers. Older models might use about 40 gallons per load.<br><span style=\"color:red\">Tip: </span>EnergyStar clothes washers not only save a lot of water but also save electricity.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td class=\"water-usage-topic\">Toilet Flush</td>\n",
+    "                <td>3 gallons. Most new toilets use 1.6 gallons per flush, but many older toilets used about 4 gallons.<br><span style=\"color: red\">Tip: </span>Check for toilet leaks! Adjust the water level in your tank. But, best to install a new low-flow toilet.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td class=\"water-usage-topic\">Glasses of water you drank</td>\n",
+    "                <td>8 oz. per small glass (not counting for Fido or your cats). Also, note that you will using water for cooking.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td class=\"water-usage-topic\">Outdoor watering</td>\n",
+    "                <td>2 gallons per minute, depending on the force of your faucet. This may sound like too much but the large size of lawns and yards means outdoor water use can be a significant use of water.</td>\n",
+    "            </tr>\n",
+    "        </tbody>\n",
+    "    </table>\n",
+    "</div>\n",
+    "<script>\n",
+    "    var tr = d3.select(\"#water-use-at-home-container\").select(\"table\").selectAll(\"tr\").select(\"td\").style(\"width\", \"70px\");\n",
+    "</script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "With a partner, add up how much water you use in a typical day and convert it to Litres using the following formula:\n",
     "\n",
     " ________ gal * 3.76 = _______ L\n",
