--- a/Vincent/CC-124 Percents/Percents.ipynb
+++ b/Vincent/CC-124 Percents/Percents.ipynb
@@ -18,20 +18,165 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<script src=\"https://d3js.org/d3.v3.min.js\"></script>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ideas\n",
-    "- Sales tax examples\n",
-    "- using pie chart to visualize, maybe interactive\n",
-    "- Percent of students who own cats, dogs, both, or neither. Show as fractions contrasted with percentage. Maybe add inputs to get a class worth of data and include auto populate if not in a class setting (represent in pie chart?)\n",
-    "- Show how to go from fraction to percent using $\\dfrac{x}{100}$ and $\\dfrac{x}{y}$ with $y \\neq 100$\n",
-    "- intro video or fun gif/image to engage (maybe win/loss ratio when playing a game)\n",
-    "- sports, goalie saves to shot ratio\n",
+    "# Percentages\n",
+    "## Introduction\n",
+    "In this notebook we will discuss what percentages are and why this way of representing data is helpful in many different contexts. Common examples of percentages are sales tax or a mark for an assignment.\n",
     "\n",
-    "https://www.kevinsidwar.com/iot/2017/7/1/the-undocumented-nhl-stats-api\n",
+    "For example, if the sales tax is $5\\%$, this means that for every dollar you spend the tax adds $0.05$ cents to the total price of the purchase. \n",
     "\n",
-    "\n"
+    "A percentages simply represents a fraction (per hundred), $90\\%$ is the same as saying $\\dfrac{90}{100}$. It is used to represent a ratio.\n",
+    "\n",
+    "What makes percentages so powerful is that they can represent any ratio, for example getting $\\dfrac{22}{25}$ on a math exam can be represented as $88\\%$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to Get a Percentage\n",
+    "As mentioned in the introduction, a percentage is simply a fraction represented as a ratio. For this notebook we will only talk about fractions between 0% and 100%, this means the ratio will always be a value between $0$ and $1$. \n",
+    "\n",
+    "Let's look at our math exam mark example from above, the student correctly answered $22$ questions out of $25$, therefor the student received a grade of $\\dfrac{22}{25}$. To represent this ratio as a fraction we first convert $\\dfrac{22}{25}$ as it's decimal representation, simply do the division in your calculator. $$\\dfrac{22}{25} = 22 \\div 25 = 0.88$$ Ok we are almost done, we now have the ratio represented as a value between 0 and 1. To finish getting the answer to our problem all we need to do is multiply this value by $100$ to get our percentage. $$0.88 \\times 100 = 88\\%$$\n",
+    "\n",
+    "Think of a grade you recently received (as a fraction) and convert it to a percentage. Once you think you have an answer you can use the widget below to check your answer. \n",
+    "\n",
+    "Simply add the total marks of the test/assignment then move the slider until you get to your grade received."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "    <style>\n",
+    "        .main {\n",
+    "            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;\n",
+    "        }\n",
+    "\n",
+    "        .slider {\n",
+    "            width: 100px;\n",
+    "        }\n",
+    "\n",
+    "        #maxVal {\n",
+    "            border:1px solid #cccccc;\n",
+    "            border-radius: 5px;\n",
+    "            width: 50px;\n",
+    "        }\n",
+    "    </style>\n",
+    "    <div class=\"main\" style=\"border:2px solid black; width: 400px; padding: 20px;border-radius: 10px; margin: 0 auto; box-shadow: 3px 3px 12px #acacac\">\n",
+    "        <div>\n",
+    "            <label for=\"maxValue\">Enter the assignment/exam total marks</label>\n",
+    "            <input type=\"number\" id=\"maxVal\" value=\"100\">\n",
+    "        </div>\n",
+    "        <div>\n",
+    "            <input type=\"range\" min=\"0\" max=\"100\" value=\"0\" class=\"slider\" id=\"mySlider\" style=\"width: 300px; margin-top: 20px;\">\n",
+    "        </div>\n",
+    "        <h4 id=\"sliderVal\">0</h3>\n",
+    "    </div>\n",
+    "\n",
+    "    <script>\n",
+    "        var slider = document.getElementById('mySlider');\n",
+    "        var sliderVal = document.getElementById('sliderVal');\n",
+    "\n",
+    "        slider.oninput = function () {\n",
+    "            var sliderMax = document.getElementById('maxVal').value;\n",
+    "            if(sliderMax < 0 || isNaN(sliderMax)) {\n",
+    "                sliderMax = 100;\n",
+    "                document.getElementById('maxVal').value = 100;\n",
+    "            }\n",
+    "            d3.select('#mySlider').attr('max', sliderMax);\n",
+    "            sliderVal.innerHTML = \"If you answered \" + this.value + \"/\" + sliderMax + \" correct questions your grade will be \" + ((\n",
+    "                this.value / sliderMax) * 100).toPrecision(3) + \"%\";\n",
+    "        }\n",
+    "    </script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solving Problems Using Percentages\n",
+    "\n",
+    "Now that we understand what percentages mean and how to get them from fractions, let's look at solving problems using percentages. Start by watching the video below to get a basic understanding."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<div align=\"middle\">\n",
+    "<iframe id=\"percentVid\" width=\"640\" height=\"360\" src=\"https://www.youtube.com/embed/rR95Cbcjzus?end=368\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen style=\"box-shadow: 3px 3px 12px #ACACAC\"></iframe> \n",
+    "<p><a href=\"https://www.youtube.com/channel/UC4a-Gbdw7vOaccHmFo40b9g\" target=\"_blank\">Click here</a> for more videos by Khan Academy</p>\n",
+    "</div>\n",
+    "<script>\n",
+    "$(function () {\n",
+    "    $(\"#percentVid\").not(\":has([src])\").each(function () {\n",
+    "        var ifrm = this;\n",
+    "        ifrm = (ifrm.contentWindow) ? ifrm.contentWindow : (ifrm.contentDocument.document) ? ifrm.contentDocument.document : ifrm.contentDocument;\n",
+    "        ifrm.document.open();\n",
+    "        ifrm.document.write('If the video does not start click <a href=\"https://www.youtube.com/watch?v=rR95Cbcjzus\" target=\"_blank\">here</a>');\n",
+    "        ifrm.document.close();\n",
+    "    });\n",
+    "\n",
+    "});\n",
+    "</script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As shown in the video, taking $25\\%$ of 20 \"things\" is the same as saying $\\dfrac{25}{100}\\times\\dfrac{20}{1}=\\dfrac{500}{100}=\\dfrac{5}{1}=5$. \n",
+    "\n",
+    "Let's do another example, assume a retail store is having a weekend sale. The sale is everything in store is $30\\%$ off. Sam thinks this is a great time to buy new shoes, the shoes she is interested in are regular price $\\$89.99$. If Sam buys these shoes this weekend how much will they cost? If the sales tax is $5\\%$, what will the total price be?\n",
+    "\n",
+    "<img src=\"https://orig00.deviantart.net/5c3e/f/2016/211/b/d/converse_shoes_free_vector_by_superawesomevectors-dabxj2k.jpg\" width=\"300\">\n",
+    "<img src=\"https://www.publicdomainpictures.net/pictures/170000/nahled/30-korting.jpg\" width=\"300\">\n",
+    "\n",
+    "Let's start by figuring out the sale price of the shoes before calculating the tax. To figure out the new price we must first take $30\\%$ off the original price.\n",
+    "\n",
+    "So the shoes are regular priced at $\\$89.99$ and the sale is for $30\\%$ off $$\\$89.99\\times 30\\%=\\$89.99\\times\\frac{30}{100}=\\$26.997$$ We can round $\\$26.997$ to $\\$27$. Ok we now know how much Sam will save on her new shoes, but let's not forget that the question is asking how much will her new shows cost not how much she will save. All we need to do now is take the total price minus the savings to get the new price $$\\$89.99- \\$27=\\$62.99$$ Wow what savings!\n",
+    "\n",
+    "Now for the second part of the question, what will the total price be if the tax is $5\\%$?\n",
+    "\n",
+    "We must now figure out what $5\\%$ of $\\$62.99$ is $$\\$62.99\\times5\\%=\\$62.99\\times\\frac{5}{100}=\\$3.15$$ Now we know that Sam will need to pay $\\$3.15$ of tax on her new shoes so the final price is $$\\$62.99+\\$3.15=\\$66.14$$\n",
+    "\n",
+    "A shortcut for finding the total price including the sales tax is to add 1 to the tax ratio, let's see how this works $$\\$62.99\\times(\\frac{5}{100}+1)=\\$62.99\\times1.05=\\$66.14$$\n",
+    "\n",
+    "You can use this trick to quickly figure out a price after tax."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sports Example\n",
+    "\n",
+    "As we know statistics play a huge part in sports, keeping track of teams wins/losses or how many points a player has are integral parts of today's professional sports. Some of these stats may require more interesting mathematical formulas to figure them out, one such example is a goalie’s save percentage. \n",
+    "\n",
+    "In a sport like hockey, an important statistic to keep track of is a goalie’s save percentage, what does this mean exactly? The save percentage is the ratio of how many shots the goalie saved over how many he/she has faced. If you are familiar with the NHL you will know this statistic for goalies as Sv\\% and is represented as a number like 0.939. In this case the $0.939$ is the percentage we are interested in, you can multiply this number by $100$ to get it in the familiar form $93.9\\%$. This means the Sv\\% is $93.9\\%$, this particular goalie has saved $93.9\\%$ of the shots he's/she's faced.\n",
+    "\n",
+    "You will see below a \"sport\" like game, the objective of the game is to score on your opponent and protect your own net. As you play the game you will see (in real time) below the game window your Sv% and your opponents Sv%. Play a round or two before we discuss how to get this value.\n",
+    "\n",
+    "_**How to play:** choose the winning score from the drop down box then click \"Start\". In game use your mouse to move your paddle up and down. Don't let the ball go in your net!_"
    ]
   },
   {
@@ -82,8 +227,161 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question ideas\n",
-    "- once scored on once, can you ever get back to 1.0?"
+    "If you look below the game screen you will see \"Player's point save average\" and \"Computer's point save average\". You might also have noticed these values changed every time a save was made (unless Sv% was 1) or a score happened, can you come up with a formula to get these values?\n",
+    "\n",
+    "The Sv% value is the ratio of how many saves was made over how many total shots the player faced so our formula is $$Sv\\%=\\frac{saved \\ shots}{total \\ shots}$$\n",
+    "\n",
+    "Let's assume the player faced $33$ shots and let in $2$, then the player's Sv% is $$Sv\\%=\\frac{(33-2)}{33}=0.939$$ *Note: $(33-2)$ is how many shots where saved since the total was $33$ and the player let in $2$*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "    <style>\n",
+    "        hr {\n",
+    "            width: 60%;\n",
+    "            margin-left: 20px;\n",
+    "        }\n",
+    "    </style>\n",
+    "    <main>\n",
+    "        <div class=\"questions\">\n",
+    "            <ul style=\"list-style: none\">\n",
+    "                <h4>Question #1</h4>\n",
+    "                <li>\n",
+    "                    <label for=\"q1\" class=\"question\">A new goalie played his first game and got a shutout (did not let\n",
+    "                        the other team score) and made 33 saves, what is his Sv%? </label>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <input type=\"text\" id=\"q1\" class=\"questionInput\">\n",
+    "                    <button id=\"q1Btn\" onclick=\"checkAnswer('q1')\" class=\"ansBtn\">Check Answer</button>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <p class=\"q1Ans\" id=\"q1True\" style=\"display: none\">&#10003 That's right! Until the goalie let's\n",
+    "                        his/her\n",
+    "                        first goal in he/she will have a Sv% of 1</p>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <p class=\"q1Ans\" id=\"q1False\" style=\"display: none\">Not quite, don't forget to take the total\n",
+    "                        amount of shots minus how many went in the net</p>\n",
+    "                </li>\n",
+    "            </ul>\n",
+    "        </div>\n",
+    "        <hr>\n",
+    "        <div class=\"questions\">\n",
+    "            <ul style=\"list-style: none\">\n",
+    "                <h4>Question #2</h4>\n",
+    "                <li>\n",
+    "                    <label for=\"q2\" class=\"question\">If a goalie has a Sv% of .990 can he/she ever get back to a Sv% of\n",
+    "                        1.00?</label>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <select id=\"q2\">\n",
+    "                        <option value=\"Yes\">Yes</option>\n",
+    "                        <option value=\"No\">No</option>\n",
+    "                    </select>\n",
+    "                    <button id=\"q2Btn\" onclick=\"checkAnswer('q2')\" class=\"ansBtn\">Check Answer</button>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <p class=\"q2Ans\" id=\"q2True\" style=\"display: none\">&#10003 That's correct, the goaly could get back\n",
+    "                        up to\n",
+    "                        0.999 but never 1.00</p>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <p class=\"q2Ans\" id=\"q2False\" style=\"display: none\">Not quite, the goalie could get back up to 0.999\n",
+    "                        but never 1.00</p>\n",
+    "                </li>\n",
+    "            </ul>\n",
+    "        </div>\n",
+    "        <hr>\n",
+    "        <div class=\"questions\">\n",
+    "            <ul style=\"list-style: none\">\n",
+    "                <h4>Question #3</h4>\n",
+    "                <li>\n",
+    "                    <label for=\"q3\" class=\"question\">A student received a mark of 47/50 on his unit exam, what\n",
+    "                        percentage did he get?</label>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <input type=\"text\" id=\"q3\" class=\"questionInput\">\n",
+    "                    <button id=\"q3tn\" onclick=\"checkAnswer('q3')\" class=\"ansBtn\">Check Answer</button>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <p class=\"q3Ans\" id=\"q3True\" style=\"display: none\">&#10003 That's correct!</p>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <p class=\"q3Ans\" id=\"q3False\" style=\"display: none\">Not quite, try again</p>\n",
+    "                </li>\n",
+    "            </ul>\n",
+    "        </div>\n",
+    "        <hr>\n",
+    "        <div class=\"questions\">\n",
+    "            <ul style=\"list-style: none\">\n",
+    "                <h4>Question #4</h4>\n",
+    "                <li>\n",
+    "                    <label for=\"q4\" class=\"question\">In a class of 24 students, 8 students own cats, 12 of them own dogs\n",
+    "                        and 6 students own both cats and dogs. What is the percentage of students who own both cats and\n",
+    "                        dogs?</label>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <input type=\"text\" id=\"q4\" class=\"questionInput\">\n",
+    "                    <button id=\"q4tn\" onclick=\"checkAnswer('q4')\" class=\"ansBtn\">Check Answer</button>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <p class=\"q4Ans\" id=\"q4True\" style=\"display: none\">&#10003 That's correct!</p>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <p class=\"q4Ans\" id=\"q4False\" style=\"display: none\">Not quite, try again</p>\n",
+    "                </li>\n",
+    "            </ul>\n",
+    "        </div>\n",
+    "\n",
+    "    </main>\n",
+    "        <script>\n",
+    "        checkAnswer = function(q) {\n",
+    "            var val = document.getElementById(q).value;\n",
+    "            var isCorrect = false;\n",
+    "            $(\".\"+q+\"Ans\").css(\"display\", \"none\");\n",
+    "            switch(q) {\n",
+    "                case 'q1' : Number(val) === 1 ? isCorrect = true : isCorrect = false; break;\n",
+    "                case 'q2' : val === 'No' ? isCorrect = true : isCorrect = false; break;\n",
+    "                case 'q3' : (val === '94%'|| val === '94.0%' || Number(val) === 94) ? isCorrect = true : isCorrect = false;break;\n",
+    "                case 'q4' : (Number(val) === 25 || val === '25%' || val === '25.0%') ? isCorrect = true : isCorrect = false; break;\n",
+    "                default : return false;\n",
+    "            }\n",
+    "\n",
+    "            if(isCorrect) {\n",
+    "                $(\"#\"+q+\"True\").css(\"display\", \"block\");\n",
+    "            } else {\n",
+    "                $(\"#\"+q+\"False\").css(\"display\", \"block\");\n",
+    "            }\n",
+    "        } \n",
+    "    </script>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "As we saw in this notebook, percentages show up in many different ways and are very useful when describing a ratio. It allows for demonstrating any ratio on a familiar scale ($100$) to make data easier to understand. In this notebook we covered the following: \n",
+    " -A percentage simply represents a fraction\n",
+    " -To convert any fraction to a percent we turn it into it's decimal form and add $100$\n",
+    " -A percentage of an amount is simply a fraction multiplication problem\n",
+    " -To add or subtract a percentage of an amount we first find the percent value than add/subtract from the original value\n",
+    " -When adding a percentage to an amount we an use the decimal form of percent and add $1$ to it (for example $\\$12\\times(0.05+1)=\\$12.60$)\n",
+    " \n",
+    " Keep practicing converting fractions to percentages and it will eventually become second nature!"
    ]
   },
   {
@@ -116,10 +414,10 @@
     "\t\tvar winningScore = 3;\n",
     "\t\tvar winScreen = false;\n",
     "\n",
-    "\t\tconst PADDLE_WIDTH = 10;\n",
-    "\t\tconst PADDLE_HEIGHT = 100;\n",
-    "\t\tconst BALL_RADIUS = 10;\n",
-    "\t\tconst COMP_SPEED = 4;\n",
+    "\t\tvar PADDLE_WIDTH = 10;\n",
+    "\t\tvar PADDLE_HEIGHT = 100;\n",
+    "\t\tvar BALL_RADIUS = 10;\n",
+    "\t\tvar COMP_SPEED = 4;\n",
     "\n",
     "\t\tdocument.getElementById('startBtn').onclick = function () {\n",
     "\t\t\tinitGame();\n",
