working on Pythagorean theorem

--- a/Nicole/PythagoreanTheorem/pythagorean-theorem.ipynb
+++ b/Nicole/PythagoreanTheorem/pythagorean-theorem.ipynb
@@ -44,11 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Image"
+    "from IPython.display import Image\n",
+    "from IPython.display import HTML\n",
+    "import ipywidgets as widgets\n",
+    "import IPython"
    ]
   },
   {
@@ -58,9 +61,9 @@
     "# Pythagorean Theorem\n",
     "\n",
     "##### Grade 8 curriculum\n",
-    "This jupyter notebook will cover the pythagorean theorem, including how it was found and its applications.\n",
+    "This jupyter notebook will cover the pythagorean theorem, including its applications and a proof of the theorem.\n",
     "\n",
-    "**Note:** You should have a solid understanding of square roots and exponents with the power of 2 before moving on to this notebook. This notebook assumes you know these concepts well.\n",
+    "**Note:** You should have a solid understanding of square roots and squaring numbers before moving on to this notebook. This notebook assumes you know these concepts well, though it also gives more practice of these concepts.\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +92,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {
       "image/png": {
        "height": 600,
@@ -100,17 +103,281 @@
     }
    ],
    "source": [
-    "Image('pythagoreanTriangle.png',width=400,height=600)"
+    "Image('pythagoreanTriangle.png',width=400,height=600) #, align=\"center\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's a relationship between the areas of the squares. You should notice that the areas of the squares on the two legs added together are equal to the area of the largest square on the hypotenuse. In this example, the area of the red square is 9\n",
+    "There's a relationship between the areas of the squares. You should notice that the areas of the squares on the two legs added together are equal to the area of the largest square on the hypotenuse. In this example, the area of the red square is $9 \\text{ cm}^2$, the area of the blue square is $16 \\text{ cm}^2$, and the area of the yellow triangle is $25 \\text{ cm}^2$. $$\\text{Notice that } \\color{red}{9 \\text{ cm}^2} + \\color{blue}{16 \\text{ cm}^2} = \\color{yellow}{25 \\text{ cm}^2}$$\n",
+    "$$\\text{But } \\color{red}{3 \\text{ cm}} + \\color{blue}{4 \\text{ cm}} ≠ \\color{yellow}{5 \\text{ cm}}$$\n",
     "This relationship actually works for all right angle triangles!\n",
     "\n",
+    "**The pythagoream theorem is $a^2 + b^2 = c^2$ where $a$ and $b$ are the legs and $c$ is the hypotenuse. It does not matter which leg is $a$ or $b$**.\n",
+    "\n",
     "**Fact:** The Pythagorean Theorem is named for the Greek mathematician, Pythagoras."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 1\n",
+    "\n",
+    "Let's go through an example. \n",
+    "\n",
+    "image \n",
+    "\n",
+    "##### Question 1: What are the lengths of the legs of the triangle above?\n",
+    "\n",
+    "The side length of a square is the square root of its area. <br>\n",
+    "The side length of the red square is $\\sqrt{4 \\text{ m}^2 = 2 \\text{ m}$. <br>\n",
+    "The side length of the blue square is $\\sqrt{9 \\text{ m}^2} = 3 \\text{ m}$. <br>\n",
+    "Therefore the lengths of the legs are $2 \\text{ m}$ and $3 \\text{ m}$.\n",
+    "\n",
+    "##### Question 2: What is the area of the yellow square in the diagram above?\n",
+    "\n",
+    "Let's use the pythagorean theorem. The area of the two smaller squares added together is equal to the area of the larger square. <br>\n",
+    "The area of the red square is $ 4 \\text{ m}^2$ and the area of the blue square is $ 9 \\text{ m}^2$. <br>\n",
+    "Now we add them together: $ 4 \\text{ m}^2 + 9 \\text{ m}^2 = 13 \\text{ m}^2$. <br>\n",
+    "The area of the yellow square is $ 13 \\text{ m}^2$.\n",
+    "\n",
+    "##### Question 3: What is the length of the hypotenuse of the triangle above?\n",
+    "\n",
+    "Now we know the area of the large yellow square is $ 13 \\text{ m}^2$, so the side length of the square is $\\sqrt{13} \\text{ m}$. <br>\n",
+    "The hypotenuse of the triangle has the same length as the length of the side of the yellow square. <br>\n",
+    "Therefore the length of the hypothenuse is $\\sqrt{13} \\text{ m}$.\n",
+    "\n",
+    "\n",
+    "## Example 2\n",
+    "\n",
+    "Let's go through an example of a question without the squares. What is the length of the hypotenuse of the triangle below?\n",
+    "\n",
+    "image\n",
+    "\n",
+    "Recall the pythagorean theorem: $a^2 + b^2 = c^2$. <br>\n",
+    "Now let's put the values we know into the theorem. The length of the hypotenuse is the value of c. \n",
+    "$$\\begin{align*}\n",
+    "(2 \\text{ cm})^2 + (5 \\text{ cm})^2 & = c^2 \\\\\n",
+    "4 \\text{ cm}^2 + 25 \\text{ cm}^2 & = c^2 \\\\\n",
+    "29 \\text{ cm}^2 & = c^2 \\\\\n",
+    "\\sqrt{29 \\text { cm}^2} & = \\sqrt{c^2} \\\\\n",
+    "\\sqrt{29} \\text{ cm} & = c \\\\\n",
+    "\\end{align*}$$\n",
+    "\n",
+    "Let's approximate the answer to one decimal place. $\\sqrt{29} \\text{ cm} = 5.4 \\text{ cm}$. <br>\n",
+    "The length of the hypotenuse is $\\sqrt{29} \\text{ cm}$ or approximately $5.4 \\text{ cm}$.\n",
+    "\n",
+    "## Practice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice\n",
+    "\n",
+    "image - 4 m and 5 m legs\n",
+    "\n",
+    "#### Question 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the length of the hypotenuse of the triangle above?\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e56b0583ee4f400aa9f43b7ee448b197",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>RadioButtons</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "RadioButtons(description='Hypotenuse', index=4, options=('', '9 m', '6 m', '6.4 m', '5.4 m'), value='5.4 m')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry, that's not right, try again. Pythagorean Theorem is a² + b² = c².\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer1 = widgets.RadioButtons(options=['','9 m', '6 m','6.4 m','5.4 m'],\n",
+    "                              value='', description= 'Hypotenuse')\n",
+    "\n",
+    "def display1():\n",
+    "    IPython.display.clear_output()\n",
+    "    print(\"What is the length of the hypotenuse of the triangle above?\")\n",
+    "    IPython.display.display(answer1)\n",
+    "\n",
+    "def check1(a):\n",
+    "    display1()\n",
+    "    if answer1.value == '6.4 m':\n",
+    "        print(\"Correct! Great job! The theorem properly filled out looks like this: 16 m² + 25 m² = 41 m²\")\n",
+    "    else:\n",
+    "        if answer1.value == '':\n",
+    "            pass\n",
+    "        else:\n",
+    "            print(\"Sorry, that's not right, try again. Pythagorean Theorem is a² + b² = c².\")\n",
+    "\n",
+    "display1()\n",
+    "answer1.observe(check1, 'value')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Proof\n",
+    "\n",
+    "Not convinced that this relationship works for all right angle triangles? Look at the visual proof from mathisfun.com."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/_87RbSoELW8?rel=0\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/_87RbSoELW8?rel=0\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Algebraic proof\n",
+    "\n",
+    "We will work through the algebraic proof of a² + b² = c² together. Lets look at the diagram below.\n",
+    "\n",
+    "![proof](https://www.mathsisfun.com/geometry/images/pythagorean-theorem-proof.png)\n",
+    "\n",
+    "You can see the 4 identical right angle triangles within a square, and the sides of each triangle are labelled a, b, and c.\n",
+    "\n",
+    "#### Area of the large square\n",
+    "\n",
+    "The area of the large square is its side length squared, which is (a + b)² or (a + b)(a + b).\n",
+    "\n",
+    "#### Area of the pieces\n",
+    "\n",
+    "The area of the smaller yellow square in the middle is c². <br>\n",
+    "The area of one blue triangle is $\\frac{ab}{2}$ and since there's 4 of them, the area of all 4 triangles is $\\frac{4ab}{2} = 2ab$ <br>\n",
+    "Now we add those together to get c² + 2ab\n",
+    "\n",
+    "#### Areas are equal\n",
+    "\n",
+    "Since both the large square and all the pieces added together take up the same area, we can set both ares equal to each other. \n",
+    "$$\\begin{align*}\n",
+    "(a + b)(a + b) & = c^2 + 2ab \\tag{set equal to each other} \\\\\n",
+    "a^2 + 2ab + b^2 & = c^2 + 2ab \\tag{expand the left side} \\\\\n",
+    "a^2 + b^2 & = c^2 \\tag{subtract 2ab from both sides} \\\\\n",
+    "\\end{align*}$$\n",
+    "That's how we can prove the pythagorean theorem!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extend Your Knowledge\n",
+    "\n",
+    "We can use the pythagorean theorem for more than just finding the length of the hypotenuse given the two legs. We can find the length of one leg given the other leg and the hypotenuse. We can also determine if a triangle is a right angle by seeing if all three sides follow this theorem.  \n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "Given this right angled triangle, what is the missing side length?\n",
+    "\n",
+    "image\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer1 = widgets.RadioButtons(options=['','9 m', '6 m','6.4 m','5.4 m'],\n",
+    "                              value='', description= 'Hypotenuse')\n",
+    "\n",
+    "def display1():\n",
+    "    IPython.display.clear_output()\n",
+    "    print(\"What is the length of the hypotenuse of the triangle above?\")\n",
+    "    IPython.display.display(answer1)\n",
+    "\n",
+    "def check1(a):\n",
+    "    display1()\n",
+    "    if answer1.value == '6.4 m':\n",
+    "        print(\"Correct! Great job! The theorem properly filled out looks like this: 16 m² + 25 m² = 41 m²\")\n",
+    "    else:\n",
+    "        if answer1.value == '':\n",
+    "            pass\n",
+    "        else:\n",
+    "            print(\"Sorry, that's not right, try again. Pythagorean Theorem is a² + b² = c².\")\n",
+    "\n",
+    "display1()\n",
+    "answer1.observe(check1, 'value')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking Right angles\n",
+    "\n",
+    "We can check if a triangle is a right angle triangle by knowing if its sides fit the pythagorean theorem. If they don't then it isn't a right angle triangle. Lets look at an acute and an obtuse triangle and compare their sides in the pythagorean theorem."
    ]
   },
   {
