Add CC-124 notebook

--- a/Vincent/CC-124 Percents/Percents.ipynb
+++ b/Vincent/CC-124 Percents/Percents.ipynb
@@ -328,7 +328,7 @@
     "            <ul style=\"list-style: none\">\n",
     "                <h4>Question #4</h4>\n",
     "                <li>\n",
-    "                    <label for=\"q4\" class=\"question\">In a class of 24 students, 8 students own cats, 12 of them own dogs\n",
+    "                    <label for=\"q4\" class=\"question\">In a class of 24 students, 8 students own cats, 12 students own dogs\n",
     "                        and 6 students own both cats and dogs. What is the percentage of students who own both cats and\n",
     "                        dogs?</label>\n",
     "                </li>\n",
