Added a javascript ring clock, to be used to illustrate time in terms of sec, min, hour etc

--- a/Vincent/CC-124 Percents/Percents.ipynb
+++ b/Vincent/CC-124 Percents/Percents.ipynb
@@ -123,20 +123,27 @@
    "source": [
     "%%html\n",
     "<div align=\"middle\">\n",
-    "<iframe id=\"percentVid\" width=\"640\" height=\"360\" src=\"https://www.youtube.com/embed/rR95Cbcjzus?end=368\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen style=\"box-shadow: 3px 3px 12px #ACACAC\"></iframe> \n",
-    "<p><a href=\"https://www.youtube.com/channel/UC4a-Gbdw7vOaccHmFo40b9g\" target=\"_blank\">Click here</a> for more videos by Khan Academy</p>\n",
+    "<iframe id=\"percentVid\" width=\"640\" height=\"360\" src=\"https://www.youtube.com/embed/rR95Cbcjzus?end=368\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen style=\"box-shadow: 3px 3px 12px #ACACAC\">\n",
+    "</iframe> \n",
+    "<p><a href=\"https://www.youtube.com/channel/UC4a-Gbdw7vOaccHmFo40b9g\" target=\"_blank\">Click here</a> for more videos by Math Antics</p>\n",
     "</div>\n",
     "<script>\n",
-    "$(function () {\n",
-    "    $(\"#percentVid\").not(\":has([src])\").each(function () {\n",
-    "        var ifrm = this;\n",
-    "        ifrm = (ifrm.contentWindow) ? ifrm.contentWindow : (ifrm.contentDocument.document) ? ifrm.contentDocument.document : ifrm.contentDocument;\n",
-    "        ifrm.document.open();\n",
-    "        ifrm.document.write('If the video does not start click <a href=\"https://www.youtube.com/watch?v=rR95Cbcjzus\" target=\"_blank\">here</a>');\n",
-    "        ifrm.document.close();\n",
+    "    $(function() {\n",
+    "        var reachable = false;\n",
+    "        var myFrame = $('#percentVid');\n",
+    "        var videoSrc = myFrame.attr(\"src\");\n",
+    "        myFrame.attr(\"src\", videoSrc)\n",
+    "        .on('load', function(){reachable = true;});\n",
+    "        setTimeout(function() {\n",
+    "            if(!reachable) {\n",
+    "                var ifrm = myFrame[0];\n",
+    "                ifrm = (ifrm.contentWindow) ? ifrm.contentWindow : (ifrm.contentDocument.document) ? ifrm.contentDocument.document : ifrm.contentDocument;\n",
+    "                ifrm.document.open();\n",
+    "                ifrm.document.write('If the video does not start click <a href=\"' + videoSrc + '\" target=\"_blank\">here</a>');\n",
+    "                ifrm.document.close();\n",
+    "            }\n",
+    "        }, 2000)\n",
     "    });\n",
-    "\n",
-    "});\n",
     "</script>"
    ]
   },
